# chipatlas-diff-pipeline

./: .gitignore  Dockerfile  docker-compose.yml  requirements.txt
chipatlas-diff-pipeline/: LICENSE  README.md  cli.py  pyproject.toml
chipatlas-diff-pipeline/configs/: example_diffbind.yaml  example_dmr.yaml
chipatlas-diff-pipeline/examples/: group_a_k562_dmso.txt  group_b_k562_dauno.txt  run_tp53_k562.py  sample_metadata.csv
chipatlas-diff-pipeline/src/: api_client.py  cache.py  gene_annotation.py  qc_checks.py  utils.py  validation.py
src/: diff_analysis.py  filters.py  parser.py  report.py  visualization.py
tests/: test_pipeline.py
